# BiasAdjustCXX

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  DoBiasAdjustment  Dockerfile  Hands-On-BiasAdjustCXX.ipynb  LICENSE  Makefile  README.md  README.rst  build.sh  example_adjust.run.sh  examples.ipynb  qdm_result.nc
.github/workflows/: _build.yaml  _build.yml  _build_doc.yaml  _build_doc.yml  _build_docker.yaml  _build_docker.yml  _codeql.yml  _pre_commit.yml  _test.yaml  _test.yml  build.yaml  build_and_test.yaml  cicd.yaml  cicd.yml  codeql.yml  docker_build.yaml  docker_build_dev.yaml  release.yaml  release.yml
cmake/modules/: FindNetCDFCxx.cmake  uninstall.cmake
doc/_static/: arguments.csv
doc/src/: arguments.rst  examples.rst  introduction.rst  methods.rst  quickstart.rst
docs/: conf.py  index.rst  links.rst
docs/_static/: arguments.csv
docs/src/: arguments.rst  examples.rst  introduction.rst  methods.rst  quickstart.rst  references.rst
examples/: Hands-On-BiasAdjustCXX.ipynb  README.rst  developer_examples.ipynb  environment.yml  example_all_methods.run.sh  examples.ipynb
include/: CMethods.cpp  CMethods.hxx  Manager.hxx  MathUtils.hxx  MyMath.h  MyMath.hxx  NcFileHandler.cpp  NcFileHandler.h  NcFileHandler.hxx  Utils.h  Utils.hxx  colors.h
input_data/: 1d_control.nc  1d_observations.nc  1d_scenario.nc  control.nc  observations.nc  observations_future.nc  scenario.nc
lib/: CMethods.cpp  CMethods.h  MyMath.cpp  MyMath.h  NcFileHandler.cpp  NcFileHandler.h  Utils.cpp  Utils.h  colors.h
src/: CMakeLists.txt  CMethods.cxx  DoBiasAdjustment  DoBiasAdjustment.cpp  Manager.cxx  MathUtils.cxx  MyMath.cxx  NcFileHandler.cxx  Utils.cxx  main.cpp  main.cxx
test/: CMakeLists.txt  README.md
test/src/: ComputeIndicator.cxx
tests/: CMakeLists.txt  README.md
tests/src/: TestCMethods.cxx  TestManager.cxx  TestMathUtils.cxx  TestNcFileHandler.cxx  TestUtils.cxx  main.cxx
validation/: CMakeLists.txt  README.md  README.rst
validation/src/: CMakeLists.txt  ComputeIndicator.cxx
